--- a/Microservices/Card/appsettings.json
+++ b/Microservices/Card/appsettings.json
@@ -10,6 +10,11 @@
     "DatabaseName": "CardDb",
     "CollectionName": "Cards"
   },
+  "DeckDatabase": {
+    "ConnectionString": "mongodb://itemdb:27017",
+    "DatabaseName": "DeckDb",
+    "CollectionName": "Decks"
+  },
   "eureka": {
     "client": {
       "serviceUrl": "http://eureka:8761/eureka/",
