Trying to get cards to work

--- a/Microservices/Card/appsettings.json
+++ b/Microservices/Card/appsettings.json
@@ -12,7 +12,7 @@
   },
   "DeckDatabase": {
     "ConnectionString": "mongodb://itemdb:27017",
-    "DatabaseName": "DeckDb",
+    "DatabaseName": "CardDb",
     "CollectionName": "Decks"
   },
   "eureka": {
