--- a/Microservices/Rules-Service/appsettings.Development.json
+++ b/Microservices/Rules-Service/appsettings.Development.json
@@ -4,5 +4,20 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "spring": {
+    "application": {
+      "name": "rules-service"
+    }
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://localhost:8761/eureka/",
+      "shouldFetchRegistry": true,
+      "shouldRegisterWithEureka": true,
+      "validateCertificates": false
+    },
+    "instance": {
+    }
   }
 }
