These are good changes, Working Database entry for Cards from webscrape

--- a/Microservices/Webscraper/appsettings.json
+++ b/Microservices/Webscraper/appsettings.json
@@ -5,5 +5,26 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CardDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "CardDb",
+    "CollectionName": "Cards"
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://eureka:8761/eureka/",
+      "shouldFetchRegistry": true,
+      "shouldRegisterWithEureka": true,
+      "validateCertificates": false
+    },
+    "instance": {
+
+    }
+  },
+  "spring": {
+    "application": {
+      "name": "webscraper"
+    }
+  },
   "AllowedHosts": "*"
 }
