--- a/Microservices/Rules-Service/Rules.csproj
+++ b/Microservices/Rules-Service/Rules.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.8" />
     <PackageReference Include="Steeltoe.Discovery.Eureka" Version="3.2.1" />
   </ItemGroup>
 
