--- a/Microservices/Card/appsettings.json
+++ b/Microservices/Card/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "CardDatabase": {
-    "ConnectionString": "mongodb://itemdb:27017",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "CardDb",
     "CollectionName": "Cards"
   },
