--- a/DockerCompose/api_gateway/Dockerfile
+++ b/DockerCompose/api_gateway/Dockerfile
@@ -1,8 +1,8 @@
 # Setting up the Email Service
 FROM tomcat:8-jdk8-openjdk
 
-COPY Gateway-1.0.0.jar /usr/local/lib/Gateway.jar
+COPY Gateway-1.0.0.jar /usr/local/lib/GatewayDemo.jar
 
-ENTRYPOINT ["java","-jar","/usr/local/lib/Gateway.jar"]
+ENTRYPOINT ["java","-jar","/usr/local/lib/GatewayDemo.jar"]
 
 EXPOSE 8888
