--- a/DockerCompose/Account_Service/Dockerfile
+++ b/DockerCompose/Account_Service/Dockerfile
@@ -1,4 +1,4 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
-COPY bin/Release/net6.0/publish/ .
+COPY ./publish .
 ENTRYPOINT ["dotnet", "Account.dll"]
