Moved Deck to Webscraper

--- a/Microservices/Webscraper/appsettings.json
+++ b/Microservices/Webscraper/appsettings.json
@@ -10,6 +10,11 @@
     "DatabaseName": "CardDb",
     "CollectionName": "Cards"
   },
+  "DeckDatabase": {
+    "ConnectionString": "mongodb://carddb:27017",
+    "DatabaseName": "CardDb",
+    "CollectionName": "Decks"
+  },
   "eureka": {
     "client": {
       "serviceUrl": "http://eureka:8761/eureka/",
