--- a/DockerCompose/docker-compose.yaml
+++ b/DockerCompose/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     image: mtg-apigateway:1.0
     container_name: api_gateway
     depends_on:
-      - eureka
+      - registration_service
     ports:
       - "80:8888"
     networks:
