Updating mongo driver

--- a/DockerCompose/docker-compose.yaml
+++ b/DockerCompose/docker-compose.yaml
@@ -26,11 +26,12 @@ services:
   account_service:
     build: ./account_service
     image: mtg-accountservice:1.0
+    container_name: account_service
     depends_on:
       - registration_service
       - account_database
     ports:
-      - "5009"
+      - "5009:5009"
     networks:
       - basenetwork
     deploy:
@@ -39,10 +40,11 @@ services:
   email_service:
     build: ./email_service
     image: mtg-emailservice:1.0
+    container_name: email_service
     depends_on:
       - registration_service
     ports: 
-      - "8080"
+      - "8082:8080"
     networks:
       - basenetwork
     deploy:
@@ -51,10 +53,11 @@ services:
   rules_service:
     build: ./rules_service
     image: mtg-rules_service:1.0
+    container_name: rules_service
     depends_on:
       - registration_service
     ports:
-      - "8080"
+      - "8081:8080"
     networks:
       - basenetwork
     deploy:
@@ -63,11 +66,12 @@ services:
   card_service:
     build: ./card_service
     image: mtg-card_service:1.0
+    container_name: card_service
     depends_on:
       - registration_service
       - card_database
     ports:
-      - "8080"
+      - "8080:8080"
     networks:
       - basenetwork
     deploy:
@@ -76,11 +80,12 @@ services:
   webscraper_service:
     build: ./webscraper_service
     image: mtg-webscraper_service:1.0
+    container_name: webscraper_service
     depends_on:
       - registration_service
       - card_database
     ports:
-      - "5130"
+      - "5130:5130"
     networks:
       - basenetwork
     deploy:
