--- a/Microservices/GatewayDemo/src/main/resources/application.yml
+++ b/Microservices/GatewayDemo/src/main/resources/application.yml
@@ -13,25 +13,30 @@ spring:
   cloud:
     gateway:
       routes:
-      - id: cart
-        uri: lb://SECOND-SERVICE
+      - id: account
+        uri: lb://ACCOUNT-SERVICE
         predicates:
-        - Path=/consumer/**
+        - Path=/account/**
 
-      - id: catalog
-        uri: lb://DOTNET-API        
+      - id: card #whatever
+        uri: lb://CARD-SERVICE #Eureka Service
         predicates:
-        - Path=/api1/**        
+        - Path=/card/**      #pathing
         #you can now hit this api gateway via: http://localhost:8888/api1/abc
 
-      - id: checkout
-        uri: lb://DOTNET-API2
+      - id: rules
+        uri: lb://RULES-SERVICE
         predicates:
-        - Path=/**
+        - Path=/rules/**
         #you can now hit endpoint like: http://localhost:8888/test1 this somehow maps to the minimal api endpoints
 
-      - id: email
-        uri: lb://DOTNET-API2
+      - id: webscraper
+        uri: lb://WEBSCRAPER
         predicates:
-        - Path=/api2/**
+          - Path=/webscraper/**
+
+      - id: email
+        uri: lb://EMAIL-SERVICE
+        predicates:
+        - Path=/email/**
         #you can now hit http://localhost:8888/api2
